--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -621,7 +621,7 @@ img {
 }
 
 button.btn {
-  background: #00ABED;
+  background: #00abed;
   border-radius: 50px;
   border: none;
   color: white;
